More Space for Surfire Tests